styles/my.css
/* ... */
/*end main*/
/*landing*/
.landing-container {
  position: relative;
  display: grid;
  width: 100%;
  height: 100%;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  font-size: calc(1em + 3vmin);
  font-size: -webkit-calc(1em + 3vmin);
  font-size: -moz-calc(1em + 3vmin);
}
.bg-main-1 {
  background-color: var(--bg-color-main1);
}
.bg-main-2 {
  background-color: var(--bg-color-main2);
}
.bg-main-3 {
  background-color: var(--bg-color-main3);
}
.bg-main-4 {
  background-color: var(--bg-color-main4);
}
.name {
  position: absolute;
  display: flex;
  justify-content: center;
  justify-self: center;
  color: white;
  font-size: calc(1.4em + 3vmin);
  font-size: -webkit-calc(1.4em + 3vmin);
  font-size: -moz-calc(1.4em + 3vmin);
  font-family: var(--Nova-font);
  width: 80%;
  top: 40%;
  mix-blend-mode: normal;
  backdrop-filter: blur(4px);
  text-transform: uppercase;
}
.slogan {
  position: absolute;
  display: flex;
  justify-content: center;
  justify-self: center;
  font-size: 0.5em;
  width: 90%;
  top: 70%;
  font-weight: bold;
}
/* end landing*/
/*bio*/
.bio-wrapper {
  position: relative;
  background-color: var(--bg-color-about);
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-top: 0.5em solid var(--bg-color-main1);
  border-bottom: 0.5em solid var(--bg-color-main1);
}
.bio-container {
  position: relative;
  display: grid;
  width: 98%;
  max-width: calc(800px + 4vmax);
  height: 100%;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 0.3em 1fr 0.3em;
  box-sizing: border-box;
  font-size: 1em;
  align-content: center;
  grid-gap: 0.5em;
}
.bio-container a {
  color: var(--color4--);
  font-weight: bold;
  text-decoration: none;
}
.bio-container a:hover {
  color: var(--color3--);
}

.bio-container .bio-profile {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  font-size: 0.7em;
  width: 100%;

  height: 100%;
}

.bio-container .bio-skill {
  grid-row: 2;
  display: grid;
  font-size: 0.7em;
  width: 100%;
  justify-content: center;
  grid-template-rows: auto;
  grid-template-columns: 1fr;
}
.bio-profile li,
.bio-skill li {
  display: block;
  grid-column: 1/-1;
}

.bio-profile h3,
.bio-skill h3 {
  background: var(--bg-color-main1);
}
.gauge {
  display: flex;
  grid-column: span 2;
  justify-content: flex-end;
  color: whitesmoke;
}
.gauge.yellow {
  width: 50%;
  background: var(--color5--);
}
.gauge.blue {
  width: 70%;
  background: var(--color3--);
}
.gauge.pink {
  width: 80%;
  background: var(--color1--);
}
.gauge.red {
  width: 95%;
  background: var(--color2--);
}
.gauge-track {
  display: flex;
  grid-column: span 2;
  background: rgb(203, 202, 202);
  animation: bar 2s normal 1 ease-in-out;
  -webkit-animation: bar 2s normal 1 ease-in-out;
}

/*about*/

.about-wrapper {
  position: relative;
  background-color: var(--bg-color-about);
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-bottom: 0.5em solid var(--bg-color-main1);
}
.about-container {
  position: relative;
  display: grid;
  width: 92%;
  max-width: calc(1000px + 4vmax);
  height: 100%;
  min-height: 100vh;
  grid-template-rows: 2.7em 2.7em auto 1fr;
  font-size: 1em;
}
.about-h1 {
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-self: center;
  font-size: 1.3em;
  width: 100%;
}

.about-h2 {
  position: relative;
  display: flex;
  justify-self: flex-start;
  align-self: center;
  font-size: calc(0.4em + 3vmin);
  font-size: -webkit-calc(0.4em + 3vmin);
  font-size: -moz-calc(0.4em+ 3vmin);
  left: 2%;
}

.about-p {
  display: flex;
  justify-self: center;
  align-self: center;
  font-size: 0.65em;
  width: 95%;
}
.about-history {
  display: grid;
  margin-top: 1em;
  margin-bottom: 2em;
  font-size: 1em;
  justify-self: center;
  align-self: center;
  width: 95%;
  font-size: 1em;
}
.about-history > span {
  font-size: 0.75em;
  background: var(--bg-color-body);
  margin-top: 1em; /* each history section add up with .about-history margin */
}
.about-history > ul {
  display: flex;
  flex-direction: column;
  justify-self: center;
  width: 95%;
}
.about-history > ul > li {
  display: grid;
  grid-template-columns: 3fr 7fr;
  font-size: 0.65em;
  margin-top: 0.4em;
  margin-bottom: 0.3em;
}
.about-history > ul > li > h2 {
  display: inline-flex;
  font: var(--Ubuntu-font);
  font-weight: bold;
  color: gray;
}

.about-history > ul p {
  margin-top: 1em;
  font-size: 0.65em;
}
/*end about*/
/*project*/
.project-wrapper {
  position: relative;
  background-color: var(--bg-color-project);
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
}
.project-container {
  position: relative;
  display: grid;
  width: 95%;
  max-width: calc(800px + 4vmax); /*max width of project*/
  height: 100%;
  min-height: 100vh;
  grid-template-rows: 2.7em auto 0.5em;
  font-size: 1em;
}
.project-h1 {
  position: relative;
  display: flex;
  justify-self: flex-start;
  align-self: center;
  font-size: 1.3em;
  left: 5%;
}

.project-slider-wrap {
  position: relative;
  justify-self: center;
  align-self: center;
  display: block;
  background-color: var(--bg-color-main4);
  width: 100%;
  height: 100%;
  max-height: 90vh;
  max-width: 95vw;
  font-size: 1em;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
  border-top-left-radius: 40px;
  border-top-right-radius: 40px;
  text-align: center;
  overflow: hidden;
}

.slides {
  width: 100%;
  height: 100%;
  display: flex;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
  font-size: 1rem;
}
/* ... */

